2023-10-19T08:16:40Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6571773387 # 2001
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-19
* notice: last 14d: unq all: 69 178
* notice: prev accum: outdated-unq outdated-all / unq all: 1244 3059 / 1341 3235
* notice: next accum: outdated-unq outdated-all / unq all: 1244 3059 / 1343 3238
* notice: prev exec diff / last date diff / accum: unq all: +2 +3 -1 -1 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [] / [2023-10-05 2023-10-19]

2023-10-19T00:57:27Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6568400231 # 2000
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-19
* notice: last 14d: unq all: 68 176
* notice: prev accum: outdated-unq outdated-all / unq all: 1244 3059 / 1336 3228
* notice: next accum: outdated-unq outdated-all / unq all: 1244 3059 / 1341 3235
* notice: prev exec diff / last date diff / accum: unq all: +5 +7 -0 -0 / +7 +10 -0 -0 / 7 10
* notice: removed / changed dates: [] / [2023-10-18]

2023-10-18T16:16:38Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6563673933 # 1999
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-18
* notice: last 14d: unq all: 64 169
* notice: prev accum: outdated-unq outdated-all / unq all: 1243 3057 / 1335 3226
* notice: next accum: outdated-unq outdated-all / unq all: 1244 3059 / 1336 3228
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [2023-10-04] / [2023-10-18]

2023-10-18T08:16:42Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6558117104 # 1998