@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-10-19T08:16:40Z",
-  "count_outdated" : 3059,
-  "uniques_outdated" : 1244,
-  "count" : 3238,
+  "timestamp" : "2023-10-19T16:16:42Z",
+  "count_outdated" : 3062,
+  "uniques_outdated" : 1247,
+  "count" : 3239,
   "uniques" : 1343,
   "clones" : [
-    {
-      "timestamp": "2023-10-05T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 1, 3 ],
-      "uniques": 2,
-      "uniques_minmax": [ 1, 3 ],
-      "uniques_decinc": [ 1, 3 ]
-    },
     {
       "timestamp": "2023-10-06T00:00:00Z",
       "count": 12,
@@ -133,9 +124,9 @@
     },
     {
       "timestamp": "2023-10-19T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
-      "count_decinc": [ 0, 3 ],
+      "count": 4,
+      "count_minmax": [ 3, 4 ],
+      "count_decinc": [ 0, 4 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
