@@ -1,12 +1,7 @@
 {
-  "count": 178,
-  "uniques": 69,
+  "count": 177,
+  "uniques": 67,
   "clones": [
-    {
-      "timestamp": "2023-10-05T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
     {
       "timestamp": "2023-10-06T00:00:00Z",
       "count": 12,
@@ -74,7 +69,7 @@
     },
     {
       "timestamp": "2023-10-19T00:00:00Z",
-      "count": 3,
+      "count": 4,
       "uniques": 2
     }
   ]
