@@ -1,3 +1,12 @@
+2023-10-19T16:16:42Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6577391578 # 2002
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-19
+* notice: last 14d: unq all: 67 177
+* notice: prev accum: outdated-unq outdated-all / unq all: 1244 3059 / 1343 3238
+* notice: next accum: outdated-unq outdated-all / unq all: 1247 3062 / 1343 3239
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +2 +4 -0 -0 / 2 4
+* notice: removed / changed dates: [2023-10-05] / [2023-10-19]
+
 2023-10-19T08:16:40Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6571773387 # 2001
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-19
